<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">My Inventory</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor overflow menu option that calls the supplier of  the current product [CHAR LIMIT=20] -->
    <string name="action_order">Order</string>

    <!-- Label for product name information in the editor [CHAR LIMIT=30] -->
    <string name="label_name">Product</string>

    <!-- Label for product category information in the editor [CHAR LIMIT=30] -->
    <string name="label_category">Category</string>

    <!-- Label for product price information in the editor [CHAR LIMIT=30] -->
    <string name="label_price">Price</string>

    <!-- Label for product quantity information in the editor [CHAR LIMIT=30] -->
    <string name="label_quantity">Quantity</string>

    <!-- Label for product quantity increment button [CHAR LIMIT=30] -->
    <string name="label_quantity_add">+</string>

    <!-- Label for product quantity decrement button [CHAR LIMIT=30] -->
    <string name="label_quantity_subtract">-</string>

    <!-- Label for product price information in the editor [CHAR LIMIT=30] -->
    <string name="label_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for category field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_category">Category</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">0.00</string>

    <!-- Units for price of the product (USD) [CHAR LIMIT=5] -->
    <string name="unit_product_price">$</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">0</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <!-- Text hint for supplier phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Phone</string>

    <!-- Label for dropdown menu option if the product's category is unknown [CHAR LIMIT=20] -->
    <string name="category_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the product category is 1 [CHAR LIMIT=20] -->
    <string name="category_1">Category 1</string>

    <!-- Label for dropdown menu option if the product category is 1e [CHAR LIMIT=20] -->
    <string name="category_2">Category 2</string>

    <!-- Label for sale button on list view -->
    <string name="sale_btn">SALE</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="no_supplier_phone">Add supplier phone number first!</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when no name has been given [CHAR LIMIT=NONE] -->
    <string name="editor_no_name">Please fill in the product name.</string>

    <!-- Toast message in editor when no supplier has been given [CHAR LIMIT=NONE] -->
    <string name="editor_no_supplier">Please fill in the supplier name.</string>

    <!-- Toast message in editor when no phone number has been given [CHAR LIMIT=NONE] -->
    <string name="editor_no_phone">Please fill in the supplier phone number.</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in product list when Sale button has been pressed when out of stock [CHAR LIMIT=NONE] -->
    <string name="sale_product_out_of_stock">The product is out of stock!</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

</resources>
